--- a/ThinkingForward_TestUI/Pages/Index.cshtml
+++ b/ThinkingForward_TestUI/Pages/Index.cshtml
@@ -18,37 +18,46 @@
     <form method="post">
         @if (Model.Data.Count() > 0)
         {
-            <table class="table table-striped">
-                <tr class="table-secondary">
-                    <th>
-                        <label>Latitud</label>
-                    </th>
-                    <th>
-                        <label>Longitud</label>
-                    </th>
-                    <th>
-                        <label>GeoHash</label>
-                    </th>
-                    <th>
-                        <label>Prefijo &uacute;nico</label>
-                    </th>
+        <table class="table table-striped">
+            <tr class="table-secondary">
+            <th>
+                <label>Latitud</label>
+            </th>
+            <th>
+                <label>Longitud</label>
+            </th>
+            <th>
+                <label>GeoHash</label>
+            </th>
+            <th>
+                <label>Prefijo &uacute;nico</label>
+            </th>
+        </tr>
+            @foreach (var item in Model.Data)
+            {
+                <tr>
+                    <td>@item.Latitude</td>
+                    <td>@item.Longitude</td>
+                    <td>@item.Geohash</td>
+                    <td>@item.Prefix</td>
                 </tr>
-                @foreach (var item in Model.Data)
-                {
-                    <tr>
-                        <td>@item.Latitude</td>
-                        <td>@item.Longitude</td>
-                        <td>@item.Geohash</td>
-                        <td>@item.Prefix</td>
-                    </tr>
-                }
-            </table>
+            }
+        </table>
             <nav aria-label="Pagination" class="col-12">
                 @{
                     var prevDisabled = !Model.Data.HasPreviousPage ? "disabled" : "";
                     var nextDisabled = !Model.Data.HasNextPage ? "disabled" : "";
                 }
                 <ul class="pagination justify-content-end">
+                    <li class="page-item @prevDisabled">
+                        <a class="page-link"
+                           asp-page="./Index"
+                           asp-route-pageIndex="1"
+                           aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">First</span>
+                        </a>
+                    </li>
                     <li class="page-item @prevDisabled">
                         <a class="page-link"
                            asp-page="./Index"
@@ -64,8 +73,19 @@
 
                         <li class="page-item @activeClass">
                             <a class="page-link"
-                               asp-page="./Pagination"
+                               asp-page="./Index"
                                asp-route-pageIndex="@(i.Index)">@i.Index</a>
+                        </li>
+                    }
+                    @if (Model.Data.PageIndex != Model.Data.TotalPages - 1)
+                    {
+                        <li class="page-item" @nextDisabled>
+                            <label>...</label>
+                        </li>
+                        <li class="page-item @nextDisabled">
+                            <a class="page-link"
+                               asp-page="./Index"
+                               asp-route-pageIndex="@(Model.Data.TotalPages)">@Model.Data.TotalPages</a>
                         </li>
                     }
                     <li class="page-item @nextDisabled">
@@ -75,6 +95,15 @@
                            aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                             <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                    <li class="page-item @nextDisabled">
+                        <a class="page-link"
+                           asp-page="./Index"
+                           asp-route-pageIndex="@(Model.Data.TotalPages)"
+                           aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Last</span>
                         </a>
                     </li>
                 </ul>
