--- a/ThinkingForward_TestUI/Pages/Privacy.cshtml
+++ b/ThinkingForward_TestUI/Pages/Privacy.cshtml
@@ -1,8 +1,11 @@
 ﻿@page
 @model PrivacyModel
-@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+    <div class="col-12 text-center">
+        <h1>Aar&oacute;n Parrilla</h1>
+    </div>
+
+    <div class="col-12 text-left">
+        <div class="col-6 text-left"></div>
+        <h2>Descripci&oacute;n</h2>
+    </div>
